--- a/pom.xml
+++ b/pom.xml
@@ -70,17 +70,21 @@
 			<version>1.3.2</version>
 		</dependency>
 		
-		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>1.3.2</version>
-		</dependency>
 		
 		<dependency>
 			<groupId>org.openapitools</groupId>
 			<artifactId>jackson-databind-nullable</artifactId>
 			<version>0.2.6</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>5.0.0</version> <!-- Cambiar a una versión compatible con Spring Boot 2.7 -->
+            <scope>provided</scope>
+        </dependency>
+		
+		
     </dependencies>
 
     <build>
